// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PillShell > bash: summary is the command, title is the toolName 1`] = `
"<div class="pill-layout" style="width: 280pt; height: 44pt; transition: height 280ms cubic-bezier(0.32, 0.72, 0, 1);">
  <div class="pill-compact">
    <div class="kind-dot bg-orange-500"></div><button class="middle-button" title="Click to expand" aria-label="Click to expand"><span class="summary-text">rm -rf /tmp/foo</span></button><button class="action-button allow" title="Allow once (Enter)" aria-label="Allow once"><svg width="14" height="14" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
        <polyline points="3 8 7 12 13 4"></polyline>
      </svg></button><button class="action-button deny" title="Deny (Esc)" aria-label="Deny"><svg width="12" height="12" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
        <line x1="4" y1="4" x2="12" y2="12"></line>
        <line x1="12" y1="4" x2="4" y2="12"></line>
      </svg></button>
  </div>
</div>"
`;

exports[`PillShell > edit: summary is the filePath, title is the toolName 1`] = `
"<div class="pill-layout" style="width: 280pt; height: 44pt; transition: height 280ms cubic-bezier(0.32, 0.72, 0, 1);">
  <div class="pill-compact">
    <div class="kind-dot bg-emerald-500"></div><button class="middle-button" title="Click to expand" aria-label="Click to expand"><span class="summary-text">src/foo.ts</span></button><button class="action-button allow" title="Allow once (Enter)" aria-label="Allow once"><svg width="14" height="14" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
        <polyline points="3 8 7 12 13 4"></polyline>
      </svg></button><button class="action-button deny" title="Deny (Esc)" aria-label="Deny"><svg width="12" height="12" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
        <line x1="4" y1="4" x2="12" y2="12"></line>
        <line x1="12" y1="4" x2="4" y2="12"></line>
      </svg></button>
  </div>
</div>"
`;

exports[`PillShell > json (unknown tool): summary falls back to toolName or 'Tool call' 1`] = `
"<div class="pill-layout" style="width: 280pt; height: 44pt; transition: height 280ms cubic-bezier(0.32, 0.72, 0, 1);">
  <div class="pill-compact">
    <div class="kind-dot bg-cyan-500"></div><button class="middle-button" title="Click to expand" aria-label="Click to expand"><span class="summary-text">WebFetch</span></button><button class="action-button allow" title="Allow once (Enter)" aria-label="Allow once"><svg width="14" height="14" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
        <polyline points="3 8 7 12 13 4"></polyline>
      </svg></button><button class="action-button deny" title="Deny (Esc)" aria-label="Deny"><svg width="12" height="12" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
        <line x1="4" y1="4" x2="12" y2="12"></line>
        <line x1="12" y1="4" x2="4" y2="12"></line>
      </svg></button>
  </div>
</div>"
`;
